--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <h2>Skills</h2>
 
             <!-- Category 1: Digital Electronics -->
-            <h3 class="skill-category-title">Digital Electronics</h3>
+            <h3 class="skill-category-title">Digital Electronics and Embedded Systems</h3>
             <div class="skills-grid">
                 <div class="skill-item">
                     <img src="statics/FPGA.JPG" alt="FPGA" class="skill-icon">
@@ -319,6 +319,14 @@
                 </div>
             </div>
             <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/arm.svg" alt="arm" class="skill-icon">
+                    <span class="skill-name">STM32/AT91/LPC17xx</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/8bitmcu.png" alt="8bit" class="skill-icon">
+                    <span class="skill-name">Atmel-AVR/STM8/SILabs-EFM8</span>
+                </div>
                 <div class="skill-item">
                     <img src="statics/Vivado.jpg" alt="vivado" class="skill-icon">
                     <span class="skill-name">Xillinx Vivado</span>
@@ -364,7 +372,7 @@
                 </div>
             </div>
             <!-- Category 3: Interfaces -->
-            <h3 class="skill-category-title">Interfaces</h3>
+            <h3 class="skill-category-title">Communication Interfaces and Localization</h3>
             <div class="skills-grid">
                 <div class="skill-item">
                     <img src="statics/BLE.png" alt="BLE" class="skill-icon">
