--- a/index.html
+++ b/index.html
@@ -439,7 +439,25 @@
                     <span class="skill-name">CUDA</span>
                 </div>
             </div>
-
+            <h3 class="skill-category-title">CI/CD</h3>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/git.png" alt="git" class="skill-icon">
+                    <span class="skill-name">Git</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/Git.png" alt="git" class="skill-icon">
+                    <span class="skill-name">GIT</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/docker.png" alt="docker" class="skill-icon">
+                    <span class="skill-name">Docker</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/Azure.png" alt="azure" class="skill-icon">
+                    <span class="skill-name">Azure</span>
+                </div>
+            </div>
         </section>
 
         <!-- ACADEMIC EXPERIENCE SECTION -->
