--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 </div>
                 <div class="skill-item">
                     <img src="statics/8bitmcu.png" alt="8bit" class="skill-icon">
-                    <span class="skill-name">Atmel-AVR/STM8/SILabs-EFM8</span>
+                    <span class="skill-name">Atmel AVR/STM8/SILabs EFM8</span>
                 </div>
                 <div class="skill-item">
                     <img src="statics/Vivado.jpg" alt="vivado" class="skill-icon">
@@ -463,7 +463,69 @@
         <!-- ACADEMIC EXPERIENCE SECTION -->
         <section id="academic-exp">
             <h2>Academic Experience</h2>
-            <p>Teaching Assistant, Research Assistant roles, or lecturing experience.</p>
+
+            <!-- Subsection: Teaching -->
+            <h3 class="skill-category-title">Teaching Assistantships</h3>
+            <ul class="education-list">
+                
+                <!-- TA Item 1 -->
+                <li class="education-item">
+                    <!-- KNTU Logo (make sure you have this file or use a placeholder) -->
+                    <img src="statics/kntoosi.png" alt="KNTU Logo" class="edu-logo">
+                    <div class="edu-details">
+                        <h3>Deep Generative Models (DGM)</h3>
+                        <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Spring 2025</strong></p>
+                        <p>Graduate Instructional Assistant for Dr. Behrooz Nasihatkon.<br>
+                        Assisted with advanced generative modeling concepts and student projects.</p>
+                    </div>
+                </li>
+
+                <!-- TA Item 2 -->
+                <li class="education-item">
+                    <img src="statics/kntoosi.png" alt="KNTU Logo" class="edu-logo">
+                    <div class="edu-details">
+                        <h3>Deep Learning (DL)</h3>
+                        <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Fall 2024</strong></p>
+                        <p>Graduate Instructional Assistant for Dr. Mahdi Aliyari-Shoorehdeli.<br>
+                        Supported instruction on deep neural network architectures and implementation.</p>
+                    </div>
+                </li>
+
+            </ul>
+
+            <!-- Subsection: Key Courses -->
+            <h3 class="skill-category-title">Selected Graduate Coursework</h3>
+            <div class="skills-grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
+                
+                <!-- Course 1 -->
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">VHDL</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 20 / 20</p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                </div>
+
+                <!-- Course 2 -->
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">ASIC / FPGA Design</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.93 / 20</p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                </div>
+
+                <!-- Course 3 -->
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Neural Networks</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.75 / 20</p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                </div>
+
+                <!-- Course 4 -->
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">VLSI</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.50 / 20</p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                </div>
+
+            </div>
         </section>
 
         <!-- HONORS SECTION -->
