--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <!-- TA Item 1 -->
                 <li class="education-item">
                     <!-- KNTU Logo (make sure you have this file or use a placeholder) -->
-                    <img src="statics/kntoosi.png" alt="KNTU Logo" class="edu-logo">
+                    <img src="statics/kntu.png" alt="KNTU Logo" class="edu-logo">
                     <div class="edu-details">
                         <h3>Deep Generative Models (DGM)</h3>
                         <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Spring 2025</strong></p>
@@ -482,7 +482,7 @@
 
                 <!-- TA Item 2 -->
                 <li class="education-item">
-                    <img src="statics/kntoosi.png" alt="KNTU Logo" class="edu-logo">
+                    <img src="statics/kntu.png" alt="KNTU Logo" class="edu-logo">
                     <div class="edu-details">
                         <h3>Deep Learning (DL)</h3>
                         <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Fall 2024</strong></p>
