--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
             <h3 class="skill-category-title">CI/CD</h3>
             <div class="skills-grid">
                 <div class="skill-item">
-                    <img src="statics/git.png" alt="git" class="skill-icon">
-                    <span class="skill-name">Git</span>
+                    <img src="statics/markdown.png" alt="markdown" class="skill-icon">
+                    <span class="skill-name">Markdown</span>
                 </div>
                 <div class="skill-item">
                     <img src="statics/Git.png" alt="git" class="skill-icon">
@@ -464,65 +464,90 @@
         <section id="academic-exp">
             <h2>Academic Experience</h2>
 
-            <!-- Subsection: Teaching -->
+            <!-- Subsection 1: Teaching Assistantships -->
             <h3 class="skill-category-title">Teaching Assistantships</h3>
             <ul class="education-list">
-                
-                <!-- TA Item 1 -->
                 <li class="education-item">
-                    <!-- KNTU Logo (make sure you have this file or use a placeholder) -->
+                    <!-- Use kntoosi.png for KNTU -->
                     <img src="statics/kntu.png" alt="KNTU Logo" class="edu-logo">
                     <div class="edu-details">
                         <h3>Deep Generative Models (DGM)</h3>
-                        <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Spring 2025</strong></p>
-                        <p>Graduate Instructional Assistant for Dr. Behrooz Nasihatkon.<br>
-                        Assisted with advanced generative modeling concepts and student projects.</p>
+                        <p><strong>KNTU — Spring 2025</strong></p>
+                        <p>Graduate Instructional Assistant for Dr. Behrooz Nasihatkon.</p>
                     </div>
                 </li>
-
-                <!-- TA Item 2 -->
                 <li class="education-item">
                     <img src="statics/kntu.png" alt="KNTU Logo" class="edu-logo">
                     <div class="edu-details">
                         <h3>Deep Learning (DL)</h3>
-                        <p><strong>Khajeh Nasir Toosi University of Technology (KNTU) — Fall 2024</strong></p>
-                        <p>Graduate Instructional Assistant for Dr. Mahdi Aliyari-Shoorehdeli.<br>
-                        Supported instruction on deep neural network architectures and implementation.</p>
+                        <p><strong>KNTU — Fall 2024</strong></p>
+                        <p>Graduate Instructional Assistant for Dr. Mahdi Aliyari-Shoorehdeli.</p>
                     </div>
                 </li>
-
             </ul>
 
-            <!-- Subsection: Key Courses -->
-            <h3 class="skill-category-title">Selected Graduate Coursework</h3>
-            <div class="skills-grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
+            <!-- Subsection 2: Graded Graduate Coursework -->
+            <h3 class="skill-category-title">Graded Graduate Coursework</h3>
+            <div class="skills-grid" style="grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));">
                 
-                <!-- Course 1 -->
                 <div class="skill-item" style="align-items: flex-start; text-align: left;">
                     <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">VHDL</span>
-                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 20 / 20</p>
-                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 20 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. Soheila Nazari</p>
                 </div>
 
-                <!-- Course 2 -->
                 <div class="skill-item" style="align-items: flex-start; text-align: left;">
                     <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">ASIC / FPGA Design</span>
-                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.93 / 20</p>
-                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 19.93 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. Soheila Nazari</p>
                 </div>
 
-                <!-- Course 3 -->
                 <div class="skill-item" style="align-items: flex-start; text-align: left;">
                     <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Neural Networks</span>
-                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.75 / 20</p>
-                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 19.75 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. Reza Ghaderi</p>
                 </div>
 
-                <!-- Course 4 -->
                 <div class="skill-item" style="align-items: flex-start; text-align: left;">
                     <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">VLSI</span>
-                    <p style="margin: 5px 0; font-size: 0.9rem;">Grade: 19.50 / 20</p>
-                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University</p>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 19.50 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. M. Moaiyeri</p>
+                </div>
+
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Advanced VLSI</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 18.50 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. M. Moaiyeri</p>
+                </div>
+
+                <div class="skill-item" style="align-items: flex-start; text-align: left;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Deep Learning</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><strong>Grade: 15.50 / 20</strong></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Shahid Beheshti University<br>Instr: Dr. Reza Ghaderi</p>
+                </div>
+
+            </div>
+
+            <!-- Subsection 3: Extra / Audit Courses -->
+            <h3 class="skill-category-title">Audit & Extra Courses</h3>
+            <div class="skills-grid" style="grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));">
+
+                <div class="skill-item" style="align-items: flex-start; text-align: left; border-left: 4px solid #ff9800;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Probabilistic Graphical Models</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><em>Audit Course</em></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">KNTU<br>Instr: Dr. Behrooz Nasihatkon</p>
+                </div>
+
+                <div class="skill-item" style="align-items: flex-start; text-align: left; border-left: 4px solid #ff9800;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Advanced Math for ML</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><em>Audit Course</em></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">KNTU<br>Instr: Dr. Behrooz Nasihatkon</p>
+                </div>
+
+                <div class="skill-item" style="align-items: flex-start; text-align: left; border-left: 4px solid #ff9800;">
+                    <span class="skill-name" style="font-size: 1.1rem; color: #2c3e50;">Deep Generative Models</span>
+                    <p style="margin: 5px 0; font-size: 0.9rem;"><em>Extra Course</em></p>
+                    <p style="margin: 0; font-size: 0.85rem; color: #666;">Stanford University<br>Instr: Dr. Stefano Ermon</p>
                 </div>
 
             </div>
