--- a/index.html
+++ b/index.html
@@ -577,22 +577,13 @@
                 Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real&#8209;world devices.</p>
         </section>
 
-        <!-- CERTIFICATES SECTION -->
-        <section id="certificates">
-            <h2>Certificates</h2>
-            <ul>
-                <li>AWS Certified Cloud Practitioner</li>
-                <li>Google Data Analytics Certificate</li>
-            </ul>
-        </section>
-
         <!-- CONTACT SECTION -->
         <section id="contact">
             <h2>Contact</h2>
             <div class="contact-info">
-                <p><strong>Email:</strong> email@example.com</p>
-                <p><strong>LinkedIn:</strong> linkedin.com/in/yourprofile</p>
-                <p><strong>GitHub:</strong> github.com/yourusername</p>
+                <p><strong>Email:</strong> majidfa78@gmail.com</p>
+                <p><strong>LinkedIn:</strong> https://www.linkedin.com/in/majid-farajian-899a47297</p>
+                <p><strong>GitHub:</strong> github.com/majidfa78</p>
             </div>
         </section>
 
