--- a/index.html
+++ b/index.html
@@ -291,12 +291,41 @@
         <!-- HIGHLIGHTS SECTION -->
         <section id="highlights">
             <h2>Highlights</h2>
-            <p>Key achievements, media features, or major projects you want to stand out.</p>
-        </section>
+            
+            <div class="skills-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); align-items: start;">
+                
+                <!-- Left Column: Research Focus (Fields of Interest) -->
+                <div style="background: #fdfdfd; padding: 20px; border-radius: 8px; border: 1px solid #eee;">
+                    <h3 style="margin-top: 0; color: #4caf50; border-bottom: 2px solid #eee; padding-bottom: 10px;">
+                        Research Focus
+                    </h3>
+                    <ul style="padding-left: 20px; line-height: 1.8;">
+                        <li><strong>Hardware & Memory:</strong> Memory Design, In-Memory Computing, Neuromorphic Hardware.</li>
+                        <li><strong>AI Systems:</strong> Large Language Models (LLMs), Spiking Neural Networks (SNNs).</li>
+                        <li><strong>Wireless & IoT:</strong> Indoor Localization, Long-Range Wireless Networks.</li>
+                        <li><strong>Applications:</strong> Healthcare Devices, Industrial IoT Frameworks.</li>
+                    </ul>
+                </div>
+
+                <!-- Right Column: Selected Projects & Activities -->
+                <div style="background: #fdfdfd; padding: 20px; border-radius: 8px; border: 1px solid #eee;">
+                    <h3 style="margin-top: 0; color: #4caf50; border-bottom: 2px solid #eee; padding-bottom: 10px;">
+                        Key Projects & Activities
+                    </h3>
+                    <ul style="padding-left: 20px; line-height: 1.8;">
+                        <li><strong>International Collaboration:</strong> Led collaborative research on advanced digital systems and memory design targeting top-tier venues.</li>
+                        <li><strong>Industrial R&D:</strong> Developed unified IoT frameworks and indoor positioning algorithms for edge devices at <em style="color:#555;">CoolTag Company</em>.</li>
+                        <li><strong>Teaching Leadership:</strong> Instructed graduate students in Deep Learning and Generative Models at KNTU.</li>
+                        <li><strong>Open Source:</strong> Active contributor to public repositories on GitHub (e.g., SNN-based object detection).</li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>>
 
         <!-- SKILLS SECTION -->
         <section id="skills">
-            <h2>Skills</h2>
+            <h2>Technical Skills</h2>
 
             <!-- Category 1: Digital Electronics -->
             <h3 class="skill-category-title">Digital Electronics and Embedded Systems</h3>
