--- a/index.html
+++ b/index.html
@@ -584,9 +584,41 @@
         <!-- HONORS SECTION -->
         <section id="honors">
             <h2>Honors & Awards</h2>
-            <ul>
-                <li>Best Researcher Award (2024)</li>
-                <li>Dean's List (2020-2022)</li>
+            <ul class="education-list">
+
+                <!-- Item 1 -->
+                <li class="education-item" style="align-items: center;">
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right;">
+                        Sep 2025
+                    </div>
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.1rem;">Eligible for Iranian National Talent Program</h3>
+                        <p style="margin: 5px 0 0; color: #666;">Qualifying with a substantial score.</p>
+                    </div>
+                </li>
+
+                <!-- Item 2 -->
+                <li class="education-item" style="align-items: center;">
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right;">
+                        Sep 2017 & 2022
+                    </div>
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.1rem;">Ranked Among Top 1% in National University Entrance Exam</h3>
+                        <p style="margin: 5px 0 0; color: #666;">Achieved top ranking in both B.Sc. and M.Sc. entrance exams.</p>
+                    </div>
+                </li>
+
+                <!-- Item 3 -->
+                <li class="education-item" style="align-items: center;">
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right;">
+                        Jan 2022
+                    </div>
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.1rem;">Among Top 3 Projects in the B.Sc. Program</h3>
+                        <p style="margin: 5px 0 0; color: #666;">Recognized for project excellence at SBU.</p>
+                    </div>
+                </li>
+
             </ul>
         </section>
 
