--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <li><a href="#academic-exp">Academic Exp.</a></li>
             <li><a href="#honors">Honors</a></li>
             <li><a href="#languages">Languages</a></li>
-            <li><a href="#certificates">Certificates</a></li>
+            <!-- <li><a href="#certificates">Certificates</a></li> -->
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -615,7 +615,7 @@
                     </div>
                     <div class="edu-details">
                         <h3 style="margin: 0; font-size: 1.1rem;">Among Top 3 Projects in the B.Sc. Program</h3>
-                        <p style="margin: 5px 0 0; color: #666;">Recognized for project excellence at SBU.</p>
+                        <p style="margin: 5px 0 0; color: #666;">Recognized for project excellence at SCU.</p>
                     </div>
                 </li>
 
