--- a/index.html
+++ b/index.html
@@ -214,14 +214,15 @@
     <nav>
         <ul>
             <li><a href="#about">About me</a></li>
-            <li><a href="#bio">Bio</a></li>
             <li><a href="#education">Education</a></li>
             <!-- <li><a href="#publications">Publications</a></li> -->
             <li><a href="#highlights">Highlights</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#academic-exp">Academic Exp.</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#honors">Honors</a></li>
             <li><a href="#languages">Languages</a></li>
+            <li><a href="#bio">Bio</a></li>
             <!-- <li><a href="#certificates">Certificates</a></li> -->
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -580,7 +581,90 @@
 
             </div>
         </section>
+        <!-- WORK EXPERIENCE SECTION -->
+        <section id="experience">
+            <h2>Work Experience</h2>
+            <ul class="education-list">
 
+                <!-- Job 1: Farapayesh Amin Co (Most Recent) -->
+                <li class="education-item" style="align-items: flex-start;">
+                    <!-- Date Column -->
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right; margin-top: 5px;">
+                        Jan 2023<br><span style="font-size:0.8rem; color:#999;">Jan 2025</span>
+                    </div>
+                    <!-- Content Column -->
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.2rem;">Embedded Hardware Developer</h3>
+                        <p style="margin: 2px 0 10px; color: #666; font-weight: 600;">Farapayesh Amin Co. — Tehran, Iran</p>
+                        <p style="font-size: 0.95rem; margin-bottom: 10px;">
+                            Led the hardware team in researching and developing IoT-based industrial monitoring systems and offline data loggers, while ensuring operational maintenance of ERP platforms.
+                        </p>
+                        <ul style="padding-left: 20px; font-size: 0.9rem; list-style-type: disc;">
+                            <li style="margin-bottom: 8px;">
+                                <strong>CoolTag Easy:</strong> Developed firmware (Silicon-Labs SB1 MCU) and web-app (Django) for a portable NFC temperature data-logger. <a href="https://www.cooltag.ir/products/offline/cooltagbasic/" target="_blank" style="color: #4caf50; text-decoration: none;">[View Product]</a>
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>BLE Indoor Positioning:</strong> Designed algorithms and server-side implementation (Python, ThingsBoard) for a LoRaWAN tracker system using BLE beacons.
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>Fully Automated Delivery System:</strong> Architected a unified system (ERPNext, Python, SQL, MATLAB) reducing processing time from 3 months to 1 week for batches of 1,000 products.
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+                <!-- Job 2: University Lab -->
+                <li class="education-item" style="align-items: flex-start;">
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right; margin-top: 5px;">
+                        Nov 2019<br><span style="font-size:0.8rem; color:#999;">Nov 2021</span>
+                    </div>
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.2rem;">Senior Member of Industrial Control Lab</h3>
+                        <p style="margin: 2px 0 10px; color: #666; font-weight: 600;">Shahid Chamran University — Ahvaz, Iran</p>
+                        <ul style="padding-left: 20px; font-size: 0.9rem; list-style-type: disc;">
+                            <li style="margin-bottom: 8px;">
+                                <strong>Quad-Rotor Flight Controller:</strong> Circuit design and programming (Arduino Mega) utilizing GPS/IMU positioning and Barometric Altimeter.
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>PC-Controlled DC Motor:</strong> Implemented PID speed control on AVR MCU with a Java-based GUI for Windows/Linux.
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>BLDC Motor Controller:</strong> Designed MOSFET drive stages controlled by AVR, simulated in Proteus and MATLAB.
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>Elevator Control System:</strong> Prototyped using Siemens S7-300 PLC with magnetic proximity sensors.
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+                <!-- Job 3: Ahwaz Robotic Home -->
+                <li class="education-item" style="align-items: flex-start;">
+                    <div style="min-width: 120px; font-weight: bold; color: #4caf50; border-right: 3px solid #eee; padding-right: 15px; margin-right: 15px; text-align: right; margin-top: 5px;">
+                        May 2017<br><span style="font-size:0.8rem; color:#999;">May 2020</span>
+                    </div>
+                    <div class="edu-details">
+                        <h3 style="margin: 0; font-size: 1.2rem;">Electronic Specialist</h3>
+                        <p style="margin: 2px 0 10px; color: #666; font-weight: 600;">Ahwaz Robotic Home — Ahvaz, Iran</p>
+                        <p style="font-size: 0.95rem; margin-bottom: 10px;">
+                            Maintained robotic education platforms and developed training programs incorporating cutting-edge technologies.
+                        </p>
+                        <ul style="padding-left: 20px; font-size: 0.9rem; list-style-type: disc;">
+                            <li style="margin-bottom: 8px;">
+                                <strong>Line Follower Robots (8 & 14 Sensors):</strong> Designed PCB/Frame (Altium, SolidWorks) and programmed MCU algorithms (Arduino Uno/Mega).
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>Smart Home IoT System:</strong> Developed ESP8266-based appliance control via WiFi and Telegram Bot.
+                            </li>
+                            <li style="margin-bottom: 8px;">
+                                <strong>Security System:</strong> Built an Arduino-based entrance control system using Password and NFC authentication.
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+            </ul>
+        </section>
         <!-- HONORS SECTION -->
         <section id="honors">
             <h2>Honors & Awards</h2>
@@ -650,7 +734,7 @@
     </div>
 
     <footer style="text-align: center; padding: 20px; color: #777;">
-        <p>&copy; 2025 Your Name. Hosted on GitHub Pages.</p>
+        <p>&copy; 2025 Majid Farajian. Hosted on GitHub Pages.</p>
     </footer>
 
 </body>
